--- a/.development.env
+++ b/.development.env
@@ -1,7 +1,7 @@
 PORT=5000
 POSTGRES_HOST=localhost
-POSGRES_USER=postgres
-POSGRES_DB=nest-course
-POSGRES_PASSWORD=root
-POSGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_DB=nest-course
+POSTGRES_PASSWORD=root
+POSTGRES_PORT=5432
 SECRET=secret_key_1234
